add title and description

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Krista's Personal Site</title>
+    </head>
+    <body>
+        <h1>Kristina Watkins</h1>
+        <p><em>Founder and CEO of <strong>Leaping Leopards Sewing</strong></em></p>
+        <p>I started Leaping Leopards in the summer of 2019.  While looking for leotards for my daughter, I realized just how expensive and ill fitting loetards can be.  I decided that I wanted to offer a more specialized product and fit, at a price that people could afford.  My daughter asked to name the business, and Leaping Leopards Sewing was born.  I focus on producing comfortable and stylish gymnastics leotards and dance wear. </p>
+    </body>
 </html>
