update personal description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     </head>
     <body>
         <h1>Kristina Watkins</h1>
-        <p><em>Founder and CEO of <strong>Leaping Leopards Sewing</strong></em></p>
-        <p>I started Leaping Leopards in the summer of 2019.  While looking for leotards for my daughter, I realized just how expensive and ill fitting loetards can be.  I decided that I wanted to offer a more specialized product and fit, at a price that people could afford.  My daughter asked to name the business, and Leaping Leopards Sewing was born.  I focus on producing comfortable and stylish gymnastics leotards and dance wear. </p>
+        <p><em>Founder and CEO of <strong>Leaping Leopards Sewing</strong>
+            <br>
+            Student of Computer Science at <strong>Udemy</strong></em>
+        </p>
+
+        <p>
+        I started Leaping Leopards in the summer of 2019.  While looking for leotards for my daughter, I realized just how expensive and ill fitting loetards can be.  I decided that I wanted to offer a more specialized product and fit, at a price that people could afford.  My daughter asked to name the business, and Leaping Leopards Sewing was born.  I focus on producing comfortable and stylish gymnastics leotards and dance wear. 
+        </p>
+        <p>When I am not sewing, I am focusing on improving my computer programming skills.  At the moment, web development and learning the ins and outs of git and github are my main focus.  In the future I hope to begin learning cyber security and forensics.</p>
     </body>
 </html>
