add education section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         I started Leaping Leopards in the summer of 2019.  While looking for leotards for my daughter, I realized just how expensive and ill fitting loetards can be.  I decided that I wanted to offer a more specialized product and fit, at a price that people could afford.  My daughter asked to name the business, and Leaping Leopards Sewing was born.  I focus on producing comfortable and stylish gymnastics leotards and dance wear. 
         </p>
         <p>When I am not sewing, I am focusing on improving my computer programming skills.  At the moment, web development and learning the ins and outs of git and github are my main focus.  In the future I hope to begin learning cyber security and forensics.</p>
-
         <hr>
+        <h1>Education</h1>
+        <p>Masters Degree in Forensic Science: <strong> University of Florida</strong><br>
+        Bachelors Degree in Biology: <strong> Elizabeth City State University</strong><br>
+        Pursuing Bachelors Degree in Computer Science:  <strong>Regis University</strong></p>
+
     </body>
 </html>
