--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <p>When I am not sewing, I am focusing on improving my computer programming skills.  At the moment, web development and learning the ins and outs of git and github are my main focus.  In the future I hope to begin learning cyber security and forensics.</p>
         <hr>
         <h3>Education</h3>
+        <ul>
+            <li>Masters Degree in Forensic Science: <strong> University of Florida</strong></li>
+            <li>Bachelors Degree in Biology: <strong> Elizabeth City State University</strong></li>
+            <li>Pursuing Bachelors Degree in Computer Science:  <strong>Regis University</strong></li>
+        </ul>
+
         <p>Masters Degree in Forensic Science: <strong> University of Florida</strong><br>
         Bachelors Degree in Biology: <strong> Elizabeth City State University</strong><br>
         Pursuing Bachelors Degree in Computer Science:  <strong>Regis University</strong></p>
