add hobby section to personal webpage

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
             <li>Bachelors Degree in Biology: <strong> Elizabeth City State University</strong></li>
             <li>Pursuing Bachelors Degree in Computer Science:  <strong>Regis University</strong></li>
         </ul>
+        <h3>Hobbies</h3>
+        <ol>
+            <li>Designing and Sewing</li>
+            <li>Udemy Classes</li>
+            <li>Adult Gymnastics</li>
+        </ol>
 
-        <p>Masters Degree in Forensic Science: <strong> University of Florida</strong><br>
-        Bachelors Degree in Biology: <strong> Elizabeth City State University</strong><br>
-        Pursuing Bachelors Degree in Computer Science:  <strong>Regis University</strong></p>
+        
 
     </body>
 </html>
