add picture folder and profile picture to webpage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Krista's Personal Site</title>
     </head>
     <body>
+        <img src="images/kristaProfile.png">
         <h1>Kristina Watkins</h1>
         <p><em>Founder and CEO of <strong>Leaping Leopards Sewing</strong>
             <br>
