--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <p>When I am not sewing, I am focusing on improving my computer programming skills.  At the moment, web development and learning the ins and outs of git and github are my main focus.  In the future I hope to begin learning cyber security and forensics.</p>
         <hr>
         <h3>Education</h3>
-        <ul>
-            <li>Masters Degree in Forensic Science: <strong> University of Florida</strong></li>
-            <li>Bachelors Degree in Biology: <strong> Elizabeth City State University</strong></li>
-            <li>Pursuing Bachelors Degree in Computer Science:  <strong>Regis University</strong></li>
+         <ul>
+            <li>Masters Degree in Forensic Science: <a href="https://forensicscience.ufl.edu"><strong> University of Florida</strong></a></li>
+            <li>Bachelors Degree in Biology: <a href="https://www.ecsu.edu/academics/learning-outcomes/bs-in-biology.html"><strong> Elizabeth City State University</strong></a></li>
+            <li>Pursuing Bachelors Degree in Computer Science:  <a href="https://www.regis.edu/academics/majors-and-programs/undergraduate/computer-science-bs-online"><strong>Regis University</strong></a></li>
         </ul>
-        <h3>Hobbies</h3>
+
         <ol>
-            <li>Designing and Sewing</li>
-            <li>Udemy Classes</li>
-            <li>Adult Gymnastics</li>
+            <li><a href="https://www.instagram.com/leapingleopardssewing/?hl=en">Designing and Sewing</a></li>
+            <li><a href="https://github.com/watkinskris/personalWebsite"></a>Udemy Classes</li>
+            <li><a href="https://www.littlestarsabudhabi.com/temporary">Adult Gymnastics</a></li>
         </ol>
 
         
