--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <hr>
         <h3>Education</h3>
          <ul>
-            <li>Masters Degree in Forensic Science: <a href="https://forensicscience.ufl.edu"><strong> University of Florida</strong></a></li>
-            <li>Bachelors Degree in Biology: <a href="https://www.ecsu.edu/academics/learning-outcomes/bs-in-biology.html"><strong> Elizabeth City State University</strong></a></li>
-            <li>Pursuing Bachelors Degree in Computer Science:  <a href="https://www.regis.edu/academics/majors-and-programs/undergraduate/computer-science-bs-online"><strong>Regis University</strong></a></li>
+            <li>Masters Degree in Forensic Science: <a href="https://forensicscience.ufl.edu" target="_blank"><strong> University of Florida</strong></a></li>
+            <li>Bachelors Degree in Biology: <a href="https://www.ecsu.edu/academics/learning-outcomes/bs-in-biology.html" target="_blank"><strong> Elizabeth City State University</strong></a></li>
+            <li>Pursuing Bachelors Degree in Computer Science:  <a href="https://www.regis.edu/academics/majors-and-programs/undergraduate/computer-science-bs-online" target="_blank"><strong>Regis University</strong></a></li>
         </ul>
 
         <ol>
-            <li><a href="https://www.instagram.com/leapingleopardssewing/?hl=en">Designing and Sewing</a></li>
-            <li><a href="https://github.com/watkinskris/personalWebsite"></a>Udemy Classes</li>
-            <li><a href="https://www.littlestarsabudhabi.com/temporary">Adult Gymnastics</a></li>
+            <li><a href="https://www.instagram.com/leapingleopardssewing/?hl=en" target="_blank">Designing and Sewing</a></li>
+            <li><a href="https://github.com/watkinskris" target="_blank">Udemy Classes</a></li>
+            <li><a href="https://www.littlestarsabudhabi.com/temporary" target="_blank">Adult Gymnastics</a></li>
         </ol>
 
         
