move hobbies to new page

--- a/index.html
+++ b/index.html
@@ -23,14 +23,6 @@
             <li>Bachelors Degree in Biology: <a href="https://www.ecsu.edu/academics/learning-outcomes/bs-in-biology.html" target="_blank"><strong> Elizabeth City State University</strong></a></li>
             <li>Pursuing Bachelors Degree in Computer Science:  <a href="https://www.regis.edu/academics/majors-and-programs/undergraduate/computer-science-bs-online" target="_blank"><strong>Regis University</strong></a></li>
         </ul>
-
-        <ol>
-            <li><a href="https://www.instagram.com/leapingleopardssewing/?hl=en" target="_blank">Designing and Sewing</a></li>
-            <li><a href="https://github.com/watkinskris" target="_blank">Udemy Classes</a></li>
-            <li><a href="https://www.littlestarsabudhabi.com/temporary" target="_blank">Adult Gymnastics</a></li>
-        </ol>
-
-        
-
+        <a href="hobbies.html">My Hobbies</a>
     </body>
 </html>
