add contact page

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
             <li>Pursuing Bachelors Degree in Computer Science:  <a href="https://www.regis.edu/academics/majors-and-programs/undergraduate/computer-science-bs-online" target="_blank"><strong>Regis University</strong></a></li>
         </ul>
         <a href="hobbies.html">My Hobbies</a>
+        <a href="contact.html">Contact Me!</a>
     </body>
 </html>
