open new tabs when links clicked

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
        <li><strong>Address:</strong>Sas Al Nakheel Village<br>
        Abu Dhabi</li>
        <li><strong>Email Address:</strong>watkinskris@yahoo.com</li>
-       <li><strong>Facebook:</strong><a href="https://www.facebook.com/krista.watkins.52">Krista Watkins</a></li>
-       <li><strong>Instagram:</strong><a href="https://www.instagram.com/leapingleopardssewing/">Leaping Leopards</a></li>
+       <li><strong>Facebook:</strong><a href="https://www.facebook.com/krista.watkins.52" target="_blank">Krista Watkins</a></li>
+       <li><strong>Instagram:</strong><a href="https://www.instagram.com/leapingleopardssewing/" target="_blank">Leaping Leopards</a></li>
    </ul>
 </body>
 </html>
