--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>Bachelors Degree in Biology: <a href="https://www.ecsu.edu/academics/learning-outcomes/bs-in-biology.html" target="_blank"><strong> Elizabeth City State University</strong></a></li>
             <li>Pursuing Bachelors Degree in Computer Science:  <a href="https://www.regis.edu/academics/majors-and-programs/undergraduate/computer-science-bs-online" target="_blank"><strong>Regis University</strong></a></li>
         </ul>
-        <a href="hobbies.html">My Hobbies</a>
-        <a href="contact.html">Contact Me!</a>
+        <a href="hobbies.html" target="_blank">My Hobbies</a>
+        <a href="contact.html" target="_blank">Contact Me!</a>
     </body>
 </html>
