add work experience

--- a/index.html
+++ b/index.html
@@ -23,6 +23,29 @@
             <li>Bachelors Degree in Biology: <a href="https://www.ecsu.edu/academics/learning-outcomes/bs-in-biology.html" target="_blank"><strong> Elizabeth City State University</strong></a></li>
             <li>Pursuing Bachelors Degree in Computer Science:  <a href="https://www.regis.edu/academics/majors-and-programs/undergraduate/computer-science-bs-online" target="_blank"><strong>Regis University</strong></a></li>
         </ul>
+        <hr>
+        <h3>Work experience</h3>
+        <table>
+            <thead>
+                <th>Dates</th>
+                <th>Titla</th>
+                <th>Employer</th>
+
+            </thead>
+            <tbody>
+                <<tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>2010-2011</td>
+                    <td>Aircraft Records Technician</td>
+                    <td>AAR Airlift</td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Skills</h3>
         <a href="hobbies.html" target="_blank">My Hobbies</a>
         <a href="contact.html" target="_blank">Contact Me!</a>
     </body>
