add skills section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Krista's Personal Site</title>
     </head>
     <body>
-        <table>
+        <table cellspacing="10px">
             <tr>
                 <td><img src="images/kristaProfile.png"></td>
                 <td><h1>Kristina Watkins</h1>
@@ -39,7 +39,7 @@
 
             </thead>
             <tbody>
-                <<tr>
+                <tr>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -52,6 +52,29 @@
             </tbody>
         </table>
         <h3>Skills</h3>
+        <table cellspacing="10px">
+            <tr>
+                <td>Sewing</td>
+                <td>⭐️⭐️⭐️⭐️</td>
+            </tr>
+            <tr>
+                <td>Sports</td>
+                <td>⭐️⭐️⭐️⭐️</td>
+            </tr>
+            <tr>
+                <td>Git</td>
+                <td>⭐️⭐️⭐️</td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>⭐️⭐️</td> 
+            <tr>
+                <td>CSS</td>
+                <td>⭐️</td>
+            </tr>
+        </table>
+        <br>
+        <br>
         <a href="hobbies.html" target="_blank">My Hobbies</a>
         <a href="contact.html" target="_blank">Contact Me!</a>
     </body>
