--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,17 @@
        <li><strong>Email Address:</strong>watkinskris@yahoo.com</li>
        <li><strong>Facebook:</strong><a href="https://www.facebook.com/krista.watkins.52" target="_blank">Krista Watkins</a></li>
        <li><strong>Instagram:</strong><a href="https://www.instagram.com/leapingleopardssewing/" target="_blank">Leaping Leopards</a></li>
+       <hr>
+       <br>
+       <form>
+          <label id="yourName">Name:</label>
+            <input type="text" name="yourName"><br>
+          <label id="yourPassword">Password: </label>
+          <input type="password" name="yourPassword"><br>
+          <label id="yourMessage">Your Message</label><br>
+          <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+        <input type="submit" name="">
+       </form>
    </ul>
 </body>
 </html>
