add background image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <title>Krista's Personal Site</title>
+
+        <style type="text/css">
+            
+            body{
+                background-image: url(images/triangles.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+                width: 100%;
+                height: 100vh;
+
+
+            }
+
+            img{
+                width: 250px;
+            }
+        </style>
     </head>
+
     <body>
         <table cellspacing="10px">
             <tr>
