--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Krista's Personal Site</title>
-
+ <!-- vh is veiwport height.  Makes the background cover the entire height of the page -->
         <style type="text/css">
             
             body{
@@ -12,12 +12,25 @@
                 background-position: center center;
                 width: 100%;
                 height: 100vh;
-
-
             }
 
             img{
                 width: 250px;
+            }
+
+            hr{
+                border:2px inset #87dfd6;
+                
+                margin-left: -50%
+
+            }
+
+            h1, h3{
+                color: #086972;
+            }
+
+            a{
+                color: #01a9b4;
             }
         </style>
     </head>
