add work experience

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             }
 
             hr{
-                border:2px inset #87dfd6;
                 
+                border-style:none #87dfd6;
+                height: 2px;
+                background-color: #87dfd6;
                 margin-left: -50%
 
             }
@@ -46,7 +48,7 @@
         </p>
 
         <p>
-        I started Leaping Leopards in the summer of 2019.  While looking for leotards for my daughter, I realized just how expensive and ill fitting leotards can be.  I decided that I wanted to offer a more specialized product and fit, at a price that people could afford.  My daughter asked to name the business, and Leaping Leopards Sewing was born.  I focus on producing comfortable and stylish gymnastics leotards and dance wear. 
+        In the summer of 2019, while looking for gymnastics leotards for my daughter, I realized just how expensive and ill fitting they can be.  I decided that I wanted to offer a more specialized product and fit, at a price that people could afford.  My daughter asked to name the business, and Leaping Leopards Sewing was born.  I focus on producing comfortable and stylish gymnastics leotards and dance wear. 
         </p>
         <p>When I am not sewing, I am focusing on improving my computer programming skills.  At the moment, web development and learning the ins and outs of git and github are my main focus.  In the future I hope to begin learning cyber security and forensics.</p></td>
             </tr>
@@ -67,18 +69,46 @@
                 <th>Dates</th>
                 <th>Title</th>
                 <th>Employer</th>
+                <th>Location</th>
 
             </thead>
             <tbody>
                 <tr>
+                    <td>June 2011 - Present</td>
+                    <td>Stay at home mom</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Abu Dhabi, UAE</td>
                 </tr>
                 <tr>
-                    <td>2010-2011</td>
-                    <td>Aircraft Records Technician</td>
+                    <td>January 2011 - June 2011</td>
+                    <td>Aircraft Technical Records Specialist</td>
                     <td>AAR Airlift</td>
+                    <td>Palm Bay, Florida</td>
+                </tr>
+                <tr>
+                    <td>January 2010 - January 2011</td>
+                    <td>Stay at home mom</td>
+                    <td></td>
+                    <td>Camden, N.C.</td>
+                </tr>
+                <tr>
+                    <td>March 2009 - June 2009</td>
+                    <td>Microbiology Technician</td>
+                    <td>J. Leek and Associates</td>
+                    <td>Edenton, N.C.</td>
+                </tr>
+                <tr>
+                    <td>June 2009 - December 2009 <br>
+                    April 2005 to February 2008</td>
+                    <td>Veterinary Assistant</td>
+                    <td> Dr. Robin Stamey, DVM</td>
+                    <td>Elizabeth City, N.C.</td>
+                </tr>
+                <tr>
+                    <td>May 2008 - December 2009</td>
+                    <td>Training Support Specialist</td>
+                    <td>U.S. Training Center</td>
+                    <td>Moyock, N.C.</td>
                 </tr>
             </tbody>
         </table>
