added css file and updated index to include sections

--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"> 
 </head>
 <body>
    <h1>Krista Watkins</h1>
    <ul>
-       <li><strong>Address:</strong>Sas Al Nakheel Village<br>
-       Abu Dhabi</li>
+       <li><strong>Address:</strong>Sas Al Nakheel Village, Abu Dhabi</li>
        <li><strong>Email Address:</strong>watkinskris@yahoo.com</li>
        <li><strong>Facebook:</strong><a href="https://www.facebook.com/krista.watkins.52" target="_blank">Krista Watkins</a></li>
-       <li><strong>Instagram:</strong><a href="https://www.instagram.com/leapingleopardssewing/" target="_blank">Leaping Leopards</a></li>
+       <li><strong>Instagram:</strong><a href="https://www.instagram.com/leapingleopardssewing/" target="_blank">Leaping Leopards Sewing</a></li>
        <hr>
        <br>
        <form>
